# molecule-multipass

./: Makefile  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ansible-lint.yml  pycodestyle.yml  python-publish.yml  release.yml
molecule_multipass/: driver.py
molecule_multipass/cookiecutter/{{cookiecutter.molecule_directory}}/{{cookiecutter.scenario_name}}/: prepare.yml
molecule_multipass/playbooks/: create.yml  destroy.yml
