[project]
name = "molecule_multipass"
version = "0.1.1"
description = "Molecule Multipass"
authors = [{ "name" = "Andrey Gubarev", "email" = "andrey@andreygubarev.com" }]

readme = "README.md"
license = { text = "MIT" }

dependencies = ["molecule >= 5.0"]

[project.entry-points."molecule.driver"]
molecule_multipass = "molecule_multipass.driver:Multipass"
