[build-system]
requires = [
  "setuptools >= 64.0.0",
  "setuptools_scm[toml] >= 7.0.5",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "molecule_multipass"
version = "0.1.0"
description = "Molecule Multipass"
authors = [{ "name" = "Andrey Gubarev", "email" = "andrey@andreygubarev.com" }]

readme = "README.md"
license = { text = "MIT" }

dependencies = ["molecule >= 5.0"]

[project.urls]
Homepage = "https://github.com/andreygubarev/molecule-multipass/"

[project.entry-points."molecule.driver"]
molecule_multipass = "molecule_multipass.driver:Multipass"
